UI: Restyling premium Area Privata - Rubrica integrata con stile card-orange, border-glow e shortcut nel footer. Migliorata spaziatura e layout grid.

--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -36,11 +36,12 @@
         <div class="base-glow"></div>
 
         <!-- 2. Header Centralizzato -->
-        <header id="header-placeholder"></header>
+        <header id="header-placeholder" class="base-header"></header>
         <div class="spacer-header"></div>
 
         <!-- 3. Main Content -->
         <main class="base-main">
+
 
             <!-- Search Bar -->
             <div class="search-container mb-20">
@@ -72,7 +73,8 @@
         </main>
 
         <!-- 4. Footer Centralizzato -->
-        <footer id="footer-placeholder"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
+
     </div>
 
     <!-- SCRIPTS -->
