--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (Protocollo 1) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.1">
 
     <!-- Core Engine -->
 
@@ -33,22 +33,22 @@
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
-        <div class="titanium-glow"></div>
+<body class="base-bg">
+    <div class="base-container">
+        <div class="base-glow"></div>
 
-        <!-- Automated Titanium Header -->
-        <div id="header-placeholder"></div>
+        <!-- Automated Header -->
+        <header id="header-placeholder" class="base-header"></header>
 
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
 
-        <main class="titanium-main">
+        <main class="base-main">
             <!-- Companies List Container -->
             <div id="aziende-list-container" class="matrix-grid">
                 <!-- Loading Spinner -->
                 <div class="loading-full">
-                    <div class="titanium-spinner"></div>
+                    <div class="base-spinner"></div>
                     <p data-t="loading_data">Caricamento...</p>
                 </div>
             </div>
@@ -57,11 +57,12 @@
         <div class="spacer-footer"></div>
 
         <!-- FOOTER PLACEHOLDER -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js?v=3.1"></script>
+
     <script type="module" src="assets/js/lista_aziende.js?v=3.1"></script>
 </body>
 
