--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -119,7 +119,8 @@
                                 <h3 class="widget-title" data-t="top_used_access">TOP 10 PIÙ USATI</h3>
                             </div>
                         </div>
-                        <div id="top-accounts-list" class="p-4 pt-4 flex flex-col gap-2">
+                        <div id="top-accounts-list" class="p-4"
+                            style="padding-top: 1.5rem; display: flex; flex-direction: column; gap: 8px;">
                             <!-- Loading -->
                             <div class="py-10 flex justify-center opacity-20">
                                 <span class="material-symbols-outlined animate-spin-slow">sync</span>
