UI: Spaziatura TOP 10 Header - Abbassato titolo
- Aggiunto padding-top: 1rem al widget-header tramite style inline
- Crea più spazio sopra la scritta 'TOP 10 PIÙ USATI'

--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -113,7 +113,7 @@
                 <!-- TOP 10 WIDGET (Spostato nella griglia per allineamento) -->
                 <div class="grid-span-2 relative z-40">
                     <div class="base-card overflow-hidden">
-                        <div class="widget-header">
+                        <div class="widget-header" style="padding-top: 1rem;">
                             <div class="flex items-center gap-2">
                                 <span class="material-symbols-outlined text-18 icon-accent-orange">star</span>
                                 <h3 class="widget-title" data-t="top_used_access">TOP 10 PIÙ USATI</h3>
