Fix: CSS Refactoring & Coerenza UI Liste
- Risolto conflitto nomi CSS: rinominato .micro-list-item in .dashboard-list-item per la Home Dashboard.
- Uniformato stile liste Top 10 e Account Privati: entrambe usano var(--card-list-bg) e blur 10px.
- Rimosso 'doppio strato' in Area Privata: container widget reso trasparente.
- Spostati blocchi CSS fuori posto (Language Selector) nella sezione corretta.
- Aggiornato CSS versioning a v3.3 su tutte le pagine.

--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -112,7 +112,8 @@
 
                 <!-- TOP 10 WIDGET (Spostato nella griglia per allineamento) -->
                 <div class="grid-span-2 relative z-40">
-                    <div class="base-card overflow-hidden">
+                    <div class="base-card overflow-hidden"
+                        style="background: transparent; border: none; box-shadow: none;">
                         <div class="widget-header" style="padding-top: 1rem;">
                             <div class="flex items-center gap-2">
                                 <span class="material-symbols-outlined text-18 icon-accent-orange">star</span>
